syntax = "proto3";

option go_package = "api.v1";

service ComService {
    rpc ProcessMessage (Request) returns (Response);
}

message Request {
    string name = 1;
    string message = 2;
    int32 id = 3;
}

message Response {
    string name = 1;
    string clientMessage = 2;
    string serverMessage = 3;
    int32 parentId = 4;
    int32 childId = 5;
}